# file-translator

./: pyproject.toml
file_translator/: config.py  main.py  schemas.py  utils.py
file_translator/routers/: file_translate.py
file_translator/services/: excel_service.py  translation_service.py
tests/: __init__.py  test_translation_service.py
