[tool.poetry]
name = "file-translator"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
asyncio = "^3.4.3"
httpx = "^0.28.1"
openpyxl = "^3.1.5"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
respx = "^0.22.0"
pytest-asyncio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_third_party = ["swifter"]
